--- a/.github/workflows/development_staging-metrics-update.yml
+++ b/.github/workflows/development_staging-metrics-update.yml
@@ -49,10 +49,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -62,13 +59,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2AEDF83E212F4A0FBF752DE621CD524A }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_DBC7253F6D6548BE9FEC23EB801D0A50 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A8A3708F04EE43728D892466479379AF }}
-
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
@@ -76,4 +66,6 @@ jobs:
           app-name: 'Staging-Metrics-Update'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A71D52EF00D34867A4685DF9918D0609 }}
+          sku: 'flexconsumption'
+        
