--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "moment": "^2.30.1"
   },
   "devDependencies": {
-    "@types/node": "^20.x",
+    "@types/node": "^20.17.50",
     "rimraf": "^5.0.0",
     "typescript": "^4.0.0"
   },
